--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
       <scope>compile</scope>
       <version>10.15.2.0</version>
     </dependency>
+    <dependency>
+      <artifactId>hibernate-core</artifactId>
+      <groupId>org.hibernate</groupId>
+      <version>6.1.2.Final</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
