--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,16 @@
       <groupId>org.hibernate</groupId>
       <version>6.1.2.Final</version>
     </dependency>
+    <dependency>
+      <artifactId>hibernate-validator</artifactId>
+      <groupId>org.hibernate.validator</groupId>
+      <version>7.0.5.Final</version>
+    </dependency>
+    <dependency>
+      <artifactId>jakarta.el</artifactId>
+      <groupId>org.glassfish</groupId>
+      <version>4.0.2</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
