--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,10 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
             <compilerArgs>
-              <args>-Xlint:all</args>
+              <args>-Xlint:all,-processing,-options</args>
             </compilerArgs>
             <failOnWarning>true</failOnWarning>
+            <showWarnings>true</showWarnings>
           </configuration>
           <version>3.8.0</version>
         </plugin>
@@ -83,6 +84,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <version>3.1.2</version>
       </plugin>
+      <plugin>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <groupId>org.springframework.boot</groupId>
+      </plugin>
     </plugins>
   </build>
 
@@ -107,17 +112,36 @@
     <dependency>
       <artifactId>hibernate-core</artifactId>
       <groupId>org.hibernate</groupId>
-      <version>6.1.2.Final</version>
     </dependency>
     <dependency>
       <artifactId>hibernate-validator</artifactId>
       <groupId>org.hibernate.validator</groupId>
-      <version>7.0.5.Final</version>
     </dependency>
     <dependency>
       <artifactId>jakarta.el</artifactId>
       <groupId>org.glassfish</groupId>
-      <version>4.0.2</version>
+    </dependency>
+
+    <!-- Spring dependencies -->
+    <dependency>
+      <artifactId>spring-boot-starter</artifactId>
+      <groupId>org.springframework.boot</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>spring-boot-devtools</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <optional>true</optional>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <artifactId>spring-boot-configuration-processor</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -136,12 +160,19 @@
   <groupId>edu.au.cpsc</groupId>
 
   <modelVersion>4.0.0</modelVersion>
+
   <name>inventory</name>
+  <parent>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <groupId>org.springframework.boot</groupId>
+    <relativePath/>
+    <version>2.7.3</version> <!-- lookup parent from repository -->
+  </parent>
 
   <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>18</java.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
   </properties>
 
   <version>1.0-SNAPSHOT</version>
